[package]
authors = ["Matthew Setter <matthew@matthewsetter.com>"]
categories = ["api-bindings"]
description = "This is a small package that simplifies interacting with Twilio's APIs in Rust applications."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "rustlio"
keywords = ["Twilio"]
readme = "README.md"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
cli-table = "0.5.0"
csv = "1.4.0"
dotenv = "0.15.0"
http = "1.4.0"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
