[package]
authors = ["Matthew Setter <matthew@matthewsetter.com>"]
categories = ["api-bindings"]
description = "This is a small package that simplifies interacting with Twilio's APIs in Rust applications."
repository = "https://github.com/settermjd/rustlio"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "rustlio"
keywords = ["Twilio"]
readme = "README.md"
version = "0.2.0"

[dependencies]
base64 = "0.22.1"
cli-table = "0.5.0"
constant_time_eq = "0.4.2"
csv = "1.4.0"
getset = "0.1.6"
hex = "0.4.3"
hmac = "0.13.0"
http = "1.4.0"
itertools = "0.14.0"
log = "0.4.32"
ordermap = "1.2.0"
query_map = { version = "0.7.0", features = ["url-query", "form_urlencoded"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5.8", features = ["serde"] }
